Added an activity for choosing which file to open. The program however starts two popups for password querying.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorPrimaryText">#000000</color>
+    <color name="colorGreen">#22d825</color>
+    <color name="colorRed">#d82222</color>
 </resources>
