--- a/app/src/main/res/layout/activity_open_file.xml
+++ b/app/src/main/res/layout/activity_open_file.xml
@@ -10,4 +10,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="maustemies.passprotecter.OpenFileActivity">
 
+    <TextView
+        android:id="@+id/textViewFoundFiles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/textView_found_files"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimaryText"/>
+
+    <ScrollView
+        android:layout_below="@+id/textViewFoundFiles"
+        android:layout_above="@+id/buttonBack"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </ScrollView>
+
+    <Button
+        android:id="@+id/buttonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="20sp"
+        android:text="@string/button_back"
+        android:textColor="@color/colorPrimaryText"
+        android:background="@color/colorRed"/>
+
 </RelativeLayout>
