--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="maustemies.passprotecter.MainActivity"
     tools:showIn="@layout/activity_main">
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/buttonChooseFile"
         android:layout_width="wrap_content"
