--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,14 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="maustemies.passprotecter.MainActivity"
     tools:showIn="@layout/activity_main">
+    <TextView
+        android:id="@+id/textViewInstructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="20sp"
+        android:text="@string/textView_instructions"
+        android:visibility="gone"/>
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
