--- a/app/src/main/res/layout/activity_open_file.xml
+++ b/app/src/main/res/layout/activity_open_file.xml
@@ -10,10 +10,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="maustemies.passprotecter.OpenFileActivity">
 
+    <Button
+        android:id="@+id/buttonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp"
+        android:textSize="20sp"
+        android:text="@string/button_back"
+        android:textColor="@color/colorPrimaryText"
+        android:background="@color/colorRed"/>
+
     <TextView
         android:id="@+id/textViewFoundFiles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/buttonBack"
         android:text="@string/textView_found_files"
         android:textSize="20sp"
         android:textColor="@color/colorPrimaryText"/>
@@ -24,17 +38,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/textViewFoundFiles"/>
-
-    <Button
-        android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="20sp"
-        android:text="@string/button_back"
-        android:textColor="@color/colorPrimaryText"
-        android:background="@color/colorRed"/>
 
 </RelativeLayout>
