--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,11 +17,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimaryText"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:text="@string/textView_instructions"
         android:visibility="gone"/>
     <ListView
         android:id="@+id/listView"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/textViewInstructions"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"/>
