--- a/app/src/main/res/layout/activity_create_file.xml
+++ b/app/src/main/res/layout/activity_create_file.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_create_file"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -85,6 +86,8 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="40dp"
+        android:background="@color/colorLightGreen"
+        android:padding="10dp"
         android:textColor="@color/colorPrimaryText"
         android:textSize="20sp"
         android:text="@string/button_create_password_file"/>
