--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorWhite"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,11 +28,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"/>
+    <ImageView
+        android:id="@+id/imageViewLogo"
+        android:padding="20dp"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/keys_of_st_peter"/>
     <Button
         android:id="@+id/buttonChooseFile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:background="@color/colorLightBlue"
+        android:padding="10dp"
         android:textColor="@color/colorPrimaryText"
         android:text="@string/button_choose_password_file"
         android:textSize="20sp"/>
@@ -42,6 +52,8 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="60dp"
         android:layout_below="@id/buttonChooseFile"
+        android:background="@color/colorLightGreen"
+        android:padding="10dp"
         android:textColor="@color/colorPrimaryText"
         android:text="@string/button_create_password_file"
         android:textSize="20sp"/>
