--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="colorPrimaryText">#000000</color>
     <color name="colorGreen">#22d825</color>
     <color name="colorRed">#d82222</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorLightGreen">#42f483</color>
+    <color name="colorLightBlue">#42dff4</color>
 </resources>
